@@ -71,7 +71,7 @@ Manager::Manager(const string& arg_config, const string& bro_command)
 	  identifiers(), all_info(), last_identifier_seen(), incomplete_type(),
 	  enum_mappings(), config(arg_config), bro_mtime()
 	{
-	if ( util::zeekenv("ZEEK_DISABLE_ZEEKYGEN") )
+	if ( getenv("ZEEK_DISABLE_ZEEKYGEN") )
 		disabled = true;
 
 	// If running bro without the "-X" option, then we don't need bro_mtime.
